tests/baselines/reference/internalImportInstantiatedModuleNotReferencingInstance.errors.txt
internalImportInstantiatedModuleNotReferencingInstance.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalImportInstantiatedModuleNotReferencingInstance.ts(6,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalImportInstantiatedModuleNotReferencingInstance.ts(8,16): error TS2437: Module 'A' is hidden by a local declaration with the same name.


==== internalImportInstantiatedModuleNotReferencingInstance.ts (3 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface X { s: string }
        export var a = 10;
    }
    
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var A = 1;
        import Y = A;
                   ~
!!! error TS2437: Module 'A' is hidden by a local declaration with the same name.
    }
    